[package]
name = "valhalla-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
common = { path = "../common" }
native-windows-gui = "1"

[build-dependencies]
winres = "0.1"

[dependencies.windows]
version = "0.52"
features = [

]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
]